# project-t-mono

./: ARCHITECTURE.md  DEVELOPMENT_STATUS.md  FILE_UPLOAD_IMPLEMENTATION.md  FRONTEND_FILE_UPLOAD_SUMMARY.md  INVITATION_FEATURE_SUMMARY.md  LOCALIZATION_COMPLETE.md  LOCALIZATION_IMPLEMENTATION.md  LOCALIZATION_TESTS_STATUS.md  LOCALIZATION_UI_COMPLETE.md  MOBILE_APP_DESIGN.md  PAYMENT_FLOW.md  PAYMENT_SETUP_INSTRUCTIONS.md  PROVIDER_REGISTRATION_WITH_FILES.md  README.md  THIRD_PARTY_SETUP.md  UNIT_TESTS_FINAL_STATUS.md  accounts.txt  countries.json  docker-compose.yml  hints_for_me.md  instructions.txt  pre_mobile_plan.md  project_map.md  refund-policy.md
backend/: .env.example  .gitignore  Dockerfile  RATE_LIMITING.md  add_columns.py  alembic.ini  cookies.txt  docker-compose.prod.yml  docker-compose.yml  prestart.sh  pyproject.toml  response.json  seed_file_definitions.py  taskiq-scheduler-start.sh  taskiq-worker-start.sh  taskiq_pre_start.py  test.db  test_debug.db  test_schema.db
backend/alembic/: env.py
backend/alembic/versions/: 01e6c470dd8f_add_registration_user_tracking_fields.py  0b6fea0ee3b4_make_provider_request_id_optional_in_.py  0e6155569298_add_trip_model.py  11c278849b87_remove_trip_price_add_package_currency.py  1b57a044cc51_add_payment_audit_logs_table.py  231716205940_make_email_and_phone_nullable_for_.py  273c654aef72_add_spot_reserved_until_to_trip_.py  2d0f2804bc89_add_nationality_to_trip_registration_.py  (+61 more)
backend/app/: backend_pre_start.py  initial_data.py  main.py
backend/scripts/: countries_data.json  seed_destinations.py
rihla-app/: .env  (+7 more)
(+385 files in other folders)
