[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
sqlmodel = "^0.0.14"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
alembic = "^1.13.1"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
requests = "^2.32.4"
taskiq = "^0.11.0"
taskiq-redis = "^1.0.0"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.0"
pytest-xdist = "^3.8.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
